src/test/deca/syntax/invalid/declClass-tooMuchExtends.synt
declClass-tooMuchExtends.deca:1: